# RPG-Simulator

./: .game.cpp.swp  CMakeLists.txt  FireSpell.h  Item.h  Living.h  Makefile  README.md  Spell.h  Warrior.h  build.bat  build.bat.save  build.sh  game.cpp
source/: .Hero.h.swp  .Monster.h.swp  .game.cpp.swp  3  AgilityPotion.cpp  AgilityPotion.h  Armor.cpp  Armor.h  CMakeLists.txt  DexterityPotion.cpp  DexterityPotion.h  FireSpell.cpp  FireSpell.h  HealthPotion.cpp  HealthPotion.h  Hero.cpp  Hero.h  IceSpell.cpp  IceSpell.h  Item.cpp  Item.h  LightingSpell.cpp  LightingSpell.h  Living.cpp  Living.h  Monster.cpp  Monster.h  Paladin.cpp  Paladin.h  Potion.h  Sorcerer.cpp  Sorcerer.h  Spell.cpp  Spell.h  StrengthPotion.cpp  StrengthPotion.h  Warrior.cpp  Warrior.h  Weapon.cpp  Weapon.h  (+4 more)
